2007-09-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/DefaultLoggingService.cs: Change default log level to
	  "WARN". Verbosity doesn't increase substantially, and the warning
	  messages do generally indicate a problem.

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/XmlReadHelper.cs: It's
	  now possible to specifiy more than one possible end node in the
	  XmlReadHelper class. 
	
	  The Properties class now generates root node called "Serialized"
	  (Properties.SerializedNode) for the custom xml serialized documents -
	  they do not need to generate an own root node anymore (therefore saving
	  some space).

2007-09-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/ICustomXmlSerializer.cs:
	  Worked on property infrastructure - serialization can now be customized
	  using the ICustomXmlSerializer interface.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* MonoDevelop.Core/Properties.cs: Fix compiler warnings. Note: one is 
	  clearly a typo, but the fix changes the logic.

2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Changed the XmlReadHelper behavior - it
	  now handles the case that the first node is equal to the closing tag
	  node.

2007-09-04   <> 

	* MonoDevelop.Core/Properties.cs: Changed the md property file format output
	  (no unknown node:Properties message anymore).

2007-08-31   <> 

	* MonoDevelop.Core.Properties/IXmlConvertable.cs,
	  MonoDevelop.Core.Properties/DefaultProperties.cs,
	  MonoDevelop.Core.Properties/PropertyEventArgs.cs,
	  MonoDevelop.Core.Properties/IProperties.cs,
	  MonoDevelop.Core.Properties/CharacterEncodings.cs,
	  MonoDevelop.Core/PropertyChangedEventArgs.cs,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/AbstractService.cs,
	  MonoDevelop.Core/IStringTagProvider.cs,
	  MonoDevelop.Core/CharacterEncodings.cs,